# protoforge-v2

./: .env.example  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  FEATURES_ADDED.md  LICENSE  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.yml  extensions_config.example.json  nginx.conf  requirements.txt  setup.sh  test_page.html  test_ui.html
.openclaw/: workspace-state.json
backend/: Dockerfile  Makefile  pyproject.toml
backend/docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md
backend/src/agents/: thread_state.py
backend/src/agents/lead_agent/: agent.py
backend/src/agents/memory/: __init__.py  updater.py
backend/src/community/: __init__.py
backend/src/config/: __init__.py
backend/src/gateway/: app.py  credits.py  generator.py
backend/src/gateway/templates/: index.html
backend/src/mcp/: __init__.py
backend/src/models/: factory.py
backend/src/sandbox/: sandbox.py  tools.py
backend/src/skills/: __init__.py
backend/src/subagents/: executor.py
backend/src/tools/builtins/: __init__.py
backend/tests/: test_config.py  test_sandbox.py  test_skills.py
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/scripts/: build-complete.sh  build.sh  bundle-python.sh  generate-icon.sh
frontend/: Makefile  next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
skills/public/3d-modeling/: SKILL.md
skills/public/code-generation/: SKILL.md
skills/public/diagram-generation/: SKILL.md
skills/public/report-generation/: SKILL.md
static/: main.css
templates/: index.html
(+2 files in other folders)
