[project]
name = "protoforge"
version = "1.0.0"
description = "AI-Powered Prototyping Super Agent Harness"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=1.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.23.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
